# IbInputSimulator

./: .gitignore  CMakeLists.txt  IbAhkSendLib.sln  IbInputSimulator.sln  README.md  README.zh-Hans.md
AhkDll/: API 2.cpp  API 3.cpp  AhkDll.vcxproj  AhkDll.vcxproj.filters  Driver.hpp  IbAhkSend.hpp  common.hpp  dllmain.cpp  import.hpp
AhkDll.Ahk/v1/: IbAhkSend.ahk
AhkDll.Ahk/v1/test/: KeyHistory.ahk  mode 0.ahk  mode 1.ahk  mode ahk.ahk  type DD.ahk  type Logitech.ahk  type Razer.ahk  type SendInput.ahk
AhkDll.Ahk/v2/: IbAhkSend.ahk
AhkDll.Ahk/v2/test/: KeyHistory.ahk  mode 0.ahk  mode 1.ahk  mode ahk.ahk  type DD.ahk  type Logitech.ahk  type Razer.ahk  type SendInput.ahk
AhkDll.Test/: AhkDll.Test.cpp  AhkDll.Test.vcxproj  AhkDll.Test.vcxproj.filters
AhkDll/SendTypes/: Base.hpp  DD.hpp  Logitech.hpp  Razer.hpp  SendInput.hpp  SendType.hpp  Types.hpp
Binding.AHK1/: IbInputSimulator.ahk
Binding.AHK1/test/: mode 0.ahk  mode 1.ahk  mode ahk.ahk  type DD.ahk  type Logitech.ahk  type MouClassInputInjection.ahk  type Razer.ahk  type SendInput.ahk
Binding.AHK2/: IbInputSimulator.ahk
Binding.AHK2/test/: KeyHistory.ahk  mode 0.ahk  mode 1.ahk  type DD.ahk  type Logitech.ahk  type MouClassInputInjection.ahk  type Razer.ahk  type SendInput.ahk
Simulator/: API 2.cpp  API 3.cpp  CMakeLists.txt  IbInputSimulator.hpp  Simulator.vcxproj  Simulator.vcxproj.filters  common.hpp  dllmain.cpp
Simulator/SendTypes/: Usb.hpp
Simulator/include/IbInputSimulator/: InputSimulator.hpp  common.hpp
Simulator/include/IbInputSimulator/SendTypes/: DD.hpp  Logitech.hpp  MouClassInputInjection.hpp  Razer.hpp  SendInput.hpp  base.hpp  types.hpp  usb.hpp
Simulator/source/: API 2.cpp  API 3.cpp  dllmain.cpp  resource.rc.cmake.in
Simulator/test/: test.cpp  vk.hpp
Test/: Test.cpp  Test.vcxproj  Test.vcxproj.filters
docs/: README.md
